k8s/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: secret-watcher
  name: secret-watcher
  namespace: secret-watcher
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: secret-watcher
